# gpx2video

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  build-issue.md  feature_request.md
docker/: Dockerfile  Dockerfile.bullseye  Dockerfile.ubuntu  DockerfileWithGTK  DockerfileWithoutGTK
gpxlib/: Algorithm.cpp  Algorithm.h  Bounds.cpp  Bounds.h  CMakeLists.txt  Copyright.cpp  Copyright.h  DGPSStation.cpp  DGPSStation.h  DateTime.cpp  DateTime.h  Decimal.cpp  Decimal.h  Degrees.cpp  Degrees.h  EMail.cpp  EMail.h  Extensions.cpp  Extensions.h  Fix.cpp  Fix.h  GPX.cpp  GPX.h  Latitude.cpp  Latitude.h  Link.cpp  Link.h  List.h  Longitude.cpp  Longitude.h  Metadata.cpp  Metadata.h  Node.cpp  Node.h  PT.cpp  PT.h  PTSeg.cpp  PTSeg.h  Parser.cpp  Parser.h  (+22 more)
gtk/: CMakeLists.txt  README.md
gtk/cmake/: CompileGResources.cmake  GSettings.cmake
gtk/data/: com.progweb.gpx2video.desktop  com.progweb.gpx2video.gschema.xml
gtk/icons/: CMakeLists.txt  icon_res.gresource.xml
gtk/src/: CMakeLists.txt  about.cpp  about.h  append.cpp  append.h  application.cpp  application.h  area.cpp  area.h  audiodevice.cpp  audiodevice.h  compat.h  cursor.cpp  cursor.h  log.cpp  log.h  log_i.h  macros.h  main.cpp  media.cpp  media.h  mediaframe.cpp  mediaframe.h  mediastackpage.cpp  mediastackpage.h  prefs.cpp  prefs.h  renderer.cpp  renderer.h  resources.cpp  settings.cpp  settings.h  settingsframe.cpp  settingsframe.h  settingsstackpage.cpp  settingsstackpage.h  shader.cpp  shader.h  stream.cpp  stream.h  (+21 more)
gtk/src/gl/: cursor-gl.fs.glsl  cursor-gl.vs.glsl  cursor-gles.fs.glsl  cursor-gles.vs.glsl  glarea-gl.fs.glsl  glarea-gl.vs.glsl  glarea-gles.fs.glsl  glarea-gles.vs.glsl  widget-gl.fs.glsl  widget-gl.vs.glsl  widget-gles.fs.glsl  widget-gles.vs.glsl
gtk/src/shape/: arc.cpp  arc.h  bar.cpp  bar.h  base.cpp  base.h  chart.cpp  chart.h  text.cpp  text.h
gtk/src/ui/: append.ui  gears_menu.ui  media_frame.ui  media_stackpage.ui  prefs.ui  settings_frame.ui  settings_stackpage.ui  telemetry_frame.ui  telemetry_stackpage.ui  video_frame.ui  video_stackpage.ui  widget_frame.ui  widget_stackpage.ui  window.ui
gtk/src/ui/shape/: arc_box.ui  bar_box.ui  chart_box.ui  text_box.ui
gtk/src/ui/widgets/: image_box.ui  lap_box.ui  map_box.ui  text_box.ui  track_box.ui
gtk/src/widgets/: avgridespeed.h  avgspeed.h  base.cpp  base.h  cadence.h  date.h  distance.h  duration.h  elevation.h  gforce.h  gpx.h  grade.h  heading.h  heartrate.h  image.cpp  image.h  lap.cpp  lap.h  map.cpp  map.h  maxspeed.h  position.h  power.h  speed.h  temperature.h  text.cpp  text.h  time.h  track.cpp  track.h  verticalspeed.h
layoutlib/: Boolean.cpp  Boolean.h  CMakeLists.txt  Decimal.cpp  Decimal.h  Layout.cpp  Layout.h  List.h  Map.cpp  Map.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Report.cpp  Report.h  ReportCerr.cpp  ReportCerr.h  String.cpp  String_.h  Track.cpp  Track.h  Unsigned.cpp  Unsigned.h  Widget.cpp  Widget.h  export.h
po/: CMakeLists.txt  POTFILES  en.po  fr.po  gpx2video.pot
qt/: GPX2VideoGeoFileTileCache.cpp  GPX2VideoGeoFileTileCache.h  GPX2VideoGeoServiceProviderFactory.cpp  GPX2VideoGeoServiceProviderFactory.h  GPX2VideoGeoTileFetcher.cpp  GPX2VideoGeoTileFetcher.h  GPX2VideoGeoTileProvider.cpp  GPX2VideoGeoTileProvider.h  GPX2VideoGeoTiledMapReply.cpp  GPX2VideoGeoTiledMapReply.h  GPX2VideoGeoTiledMappingManagerEngine.cpp  GPX2VideoGeoTiledMappingManagerEngine.h  README.md  gpx2video-qt.pro  gpx2video_plugin.json  log.c  main.cpp  map.cpp  map.h  mapsettings.h  track.cpp  track.h  tracksettings.h
qt/qml/: main.qml
samples/: data.gnuplot  layout-1520x2704.xml  layout-1920x1080.xml  layout-2704x1520.xml  layout-432x240.xml  layout.xml
src/: application.cpp  application.h  audioparams.cpp  audioparams.h  cache.cpp  cache.h  datetime.cpp  datetime.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  evcurl.c  evcurl.cpp  evcurl.h  exportcodec.cpp  exportcodec.h  extractor.cpp  extractor.h  extractorsettings.h  ffmpegutils.cpp  ffmpegutils.h  frame.cpp  frame.h  gpmf.cpp  gpmf.h  gpx.cpp  gpx.h  gpx2video.cpp  gpx2video.h  i18n.h  imagerenderer.cpp  imagerenderer.h  kalman.c  kalman.h  log.c  log.h  log_i.h  macros.h  main.cpp  (+38 more)
src/shape/: arc.cpp  arc.h  bar.cpp  bar.h  base.cpp  base.h  chart.cpp  chart.h  text.cpp  text.h
src/telemetry/: csv.h  gpx.h  tcx.h
src/widgets/: avgridespeed.cpp  avgridespeed.h  avgspeed.cpp  avgspeed.h  batterylevel.cpp  batterylevel.h  cadence.cpp  cadence.h  course.cpp  course.h  date.cpp  date.h  distance.cpp  distance.h  duration.cpp  duration.h  elevation.cpp  elevation.h  gforce.cpp  gforce.h  gpx.cpp  gpx.h  grade.cpp  grade.h  heading.cpp  heading.h  heartrate.cpp  heartrate.h  homedistance.cpp  homedistance.h  image.cpp  image.h  lap.cpp  lap.h  maxspeed.cpp  maxspeed.h  position.cpp  position.h  power.cpp  power.h  (+10 more)
tcxlib/: Activities.cpp  Activities.h  Activity.cpp  Activity.h  CMakeLists.txt  DateTime.cpp  DateTime.h  Decimal.cpp  Decimal.h  Degrees.cpp  Degrees.h  Extensions.cpp  Extensions.h  HeartRate.cpp  HeartRate.h  Lap.cpp  Lap.h  Latitude.cpp  Latitude.h  List.h  Longitude.cpp  Longitude.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Position.cpp  Position.h  Report.cpp  Report.h  ReportCerr.cpp  ReportCerr.h  String.cpp  String_.h  TCX.cpp  TCX.h  Track.cpp  Track.h  TrackPoint.cpp  TrackPoint.h  (+3 more)
tests/: CMakeLists.txt  Makefile  gpxtrk.cpp  main1.c  main2.c  main3.c  main4-get.c  main4.c  main5-oiio.cpp  main5-qt.cpp  main6-oiio.cpp  map.c  test-decoder.c  test-extract.c  test-packet.c  time.c  transcoding.c
tools/: CMakeLists.txt  README.md  data.csv  data.gpx  gpx2video.cpp  gpx2video.h  gpxtools.cpp  gpxtools.h
utmconvert/: Makefile  utmconvert.cpp  utmconvert.h  utmconvert.i
