#
# SOURCES
#
set(GPX2VIDEO_APP_SOURCES
	gpx2video.cpp
)

set(GPX2VIDEO_TOOL_SOURCES
	gpxtools.cpp
)

#
# BINARIES
#
add_executable(gpx2video ${GPX2VIDEO_APP_SOURCES})
target_link_libraries(gpx2video gpxcore gpxlib layoutlib ${LIBEVENT_LIBRARIES} ${LIBCURL_LIBRARIES} ${LIBAVUTIL_LIBRARIES} ${LIBAVFORMAT_LIBRARIES} ${LIBAVCODEC_LIBRARIES} ${LIBAVFILTER_LIBRARIES} ${LIBSWRESAMPLE_LIBRARIES} ${LIBSWSCALE_LIBRARIES} ${OIIO_LIBRARIES} ${LIBGEOGRAPHIC_LIBRARIES} ${LIBCAIRO_LIBRARIES} ${LIBFREETYPE_LIBRARIES} ssl crypto)

add_executable(gpxtools ${GPX2VIDEO_TOOL_SOURCES})
target_link_libraries(gpxtools gpxcore gpxlib ${LIBEVENT_LIBRARIES} ${LIBGEOGRAPHIC_LIBRARIES})

#
# INSTALLATION
#
install(TARGETS gpx2video DESTINATION bin)

install(TARGETS gpxtools DESTINATION bin)

